[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/familiar1_2.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/Familiar.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/familiar1_1.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/components/WeaknessDisplayComponent.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 38.9119
height = 0.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 50.249

[sub_resource type="CircleShape2D" id=3]
radius = 832.444

[node name="Familiar" type="KinematicBody2D" groups=["Enemy", "Familiar"]]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="WeaknessDisplayComponent" parent="." instance=ExtResource( 4 )]
position = Vector2( -7, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 4 )
animation = "Idle"

[node name="Area2D" type="Area2D" parent="." groups=["Enemy", "LightEnemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="StaggerTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_StaggerTimer_timeout"]
